# fundamental-fastapi-project

./: alembic.ini  pyproject.toml
app/: authentication.py  crud.py  database.py  main.py  models.py  schemas.py  security.py
app/crud/: order_crud.py  payment_crud.py  product_crud.py  user_crud.py
app/schemas/: order_schemas.py  payment_schemas.py  product_schemas.py  user_schemas.py
migration/: env.py
migration/versions/: 1684ec10f284_create_table.py  b10669fe19a9_create_table.py
