[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["tranhoaithu <tranthihoaithu1112002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.6.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
