[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["tranhoaithu <tranthihoaithu1112002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.6.4"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.8.0"
pytest = "^8.1.1"
pycryptodome = "^3.20.0"
bcrypt = "^4.1.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
alembic = "^1.13.1"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
